revamped the css for the popups

--- a/css/popupStyles.css
+++ b/css/popupStyles.css
@@ -8,7 +8,7 @@
   flex-direction: column;
 }
 
-.popup-body-title{
+.popup-body-title {
   align-items: center;
 }
 
@@ -19,13 +19,22 @@
   justify-content: space-between;
 }
 
-.popup-body-content{display: flex; flex-direction: row; justify-content: space-evenly;}
-.popup-body-content > .content-headings, .content-info, .unknown-tag{
+.popup-body-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.popup-body-content>.content-headings,
+.content-info,
+.unknown-tag {
   display: flex;
   flex-direction: column;
 }
 
-.content-headings{align-items: flex-end;}
+.content-headings, .content-info {
+  align-items: flex-end;
+}
 
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
@@ -42,7 +51,8 @@ h6 {
   width: 100%;
   text-align: center;
 }
-.subtitle > h5 {
+
+.subtitle>h5 {
   color: #636363;
   font-family: serif;
   font-style: italic;
@@ -52,6 +62,7 @@ h6 {
   width: 100%;
   text-align: center;
 }
+
 .fa-2xl {
   font-size: xx-large !important;
 }
@@ -62,6 +73,7 @@ h6 {
   padding-top: 10%;
   padding-bottom: 15%;
 }
+
 .title-popup {
   text-align: center;
   margin: flex;
@@ -70,6 +82,7 @@ h6 {
   border-right-style: none;
   border-left-style: none;
 }
+
 /* 
 .popup-body-title {
 } */
