--- a/css/webform.css
+++ b/css/webform.css
@@ -1,12 +1,8 @@
-.header{
-    width:100%;
-    height: 5vh;
-    display: flex;
-    flex-direction: row;
-    background-color: bisque;
+table{
+    border: #728224;
+    border-width: 1px;
 }
 
 tr:hover{
     background-color: #728224;
-    border-width: 1px;
 }
